# deepresearcher

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
.github/workflows/: build.yaml  build.yml
src/deepresearcher/: __init__.py  cli.py  configuration.py  graph.py  helloworld.py  logger.py  prompts.py  state.py  utils.py
tests/: README.md  conftest.py  test_configuration.py  test_graph.py  test_helloworld.py  test_prompts.py  test_state.py  test_utils.py
uml/: README.md
