[project]
name = "deepresearcher"
version = "0.1.0"
description = "fully local web research and report writing assistant"
readme = "README.md"
authors = [{ name = "Lars Nilse", email = "l.nilse@dunelm.org.uk" }]
requires-python = ">=3.11"
dependencies = ["loguru>=0.7.3", "pytest>=8.3.4"]

[project.scripts]
minimalexample = "deepresearcher.helloworld:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
